tests/neg-custom-args/captures/linear-buffer.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/linear-buffer.scala:7:29 ---------------------------------
7 |    def bar: BadBuffer[T]^ = this // error
  |                             ^^^^
  |                  Found:    BadBuffer[T]^{BadBuffer.this.rd}
  |                  Required: BadBuffer[T]^{any}
  |
  |                  Note that {any} is an exclusive capture set of the stateful type BadBuffer[T]^{any},
  |                  it cannot subsume a read-only capture set of the stateful type BadBuffer[T]^{BadBuffer.this.rd}.
  |
  |                  where:    any is a root capability classified as Unscoped in the result type of method bar
  |
  | longer explanation available when compiling with `-explain`
